# hpe-networking-assistant

./: .gitignore  .~lock.TEST_RESULTS_TRACKER.xlsx#  LICENSE  README.md  TEST_RESULTS_TRACKER.xlsx  manifest.json  pyproject.toml  requirements.txt  sample_nac_dashboard.html
.github/workflows/: ci.yml  release.yml
docs/: INSTALLATION.md  ONBOARDING.md  PUBLISHING.md  RELEASE_NOTES.md  TEST_PLAN.md
scripts/: build_extension.py
server/: main.py
src/hpe_mist_mcp/: __init__.py  __main__.py  config.py  discovery.py  mist_client.py  nac_visualizer.py  regions.py  reports.py  server.py  setup_wizard.py  topology.py  validation.py
tests/: conftest.py  test_access_assurance.py  test_client_trace.py  test_config_export.py  test_discovery.py  test_firmware.py  test_insights.py  test_mist_client.py  test_multiorg_diff.py  test_nac_visualizer.py  test_observability.py  test_onboarding.py  test_regions.py  test_reports.py  test_server.py  test_status.py  test_topology.py  test_validation.py  test_write_mode.py
